<resources>
    <string name="app_name">RapiMoncha</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="activity_main_titulo">Panel de Control</string>
    <string name="activity_splashscreen_titulo">Inicio</string>
    <string name="activity_splashscreen_descripcionimagen">Logo de la aplicación. RapiMoncha</string>
    <string name="activity_splashscreen_default_lblproceso">...</string>
    <string name="activity_splashscreen_progress_fase1">Cargando Aplicación...</string>
    <string name="activity_splashscreen_progress_fase2">Cargando componentes...</string>
    <string name="activity_splashscreen_progress_fase3">Cargando gráficos...</string>
    <string name="activity_splashscreen_progress_fase4">La aplicación está iniciando...</string>
    <string name="activity_splashscreen_progress_fase5">Lanzando activity...</string>
    <string name="activity_welcomescreen_btnregistro">Agregar tu empresa</string>
    <string name="activity_welcomescreen_lblirlogin">Ya tengo una cuenta!</string>
    <string name="activity_welcomescreen_titulo">Bienvenido</string>
    <string name="activity_welcomescreen_lblmiempresas">Empresas registradas por usted</string>
    <string name="activity_welcomescreen_btniniciarempresa">Ingresar!</string>
    <string name="activity_welcomescreen_"></string>
    <string name="activity_login_usernamehint">Nombre de Usuario</string>
    <string name="activity_login_passwordhint">Contraseña</string>
    <string name="activity_login_btnlogin">Login</string>
    <string name="activity_login_titulo">Ingreso al Sistema</string>
    <string name="activity_login_icono_descripcion">Pantalla de Login, la imagen es una llave.</string>
    <string name="activity_login_lblregistrarse">¿No tienes cuenta?</string>
    <string name="activity_login_java_msginiciologinusuario">Iniciando sesión</string>
    <string name="activity_login_java_msgfinalloginusuarioerror">No se pudo ingresar!</string>
    <string name="activity_registrocomercio_btnnext">Siguiente</string>
    <string name="activity_registrocomercio_btnprev">Anterior</string>
    <string name="activity_registrocomercio_titulo">Registro de comercio</string>
    <string name="activity_registrocomercio_java_noiratras">No puedes ir mas atrás!</string>
    <string name="activity_registrocomercio_java_noiradelante">No puedes ir mas adelante!</string>
    <string name="activity_registrocomercio_"></string>
    <string name="fragment_registrocomerciosky_lbl_datosimportantes">A continuación se le pedirán una serie de informaciones</string>
    <string name="fragment_registrocomerciosky_lbl_titulobienvenida">Procedamos a registrarte!</string>
    <string name="fragment_registrocomerciosky_lbl_notas">Puede regresar a inicio</string>
    <string name="fragment_registrocomerciosky_img_icon_description">Icono de la ventana, registro de comercio</string>
    <string name="fragment_registrocomerciosky_"></string>
    <string name="fragment_actualizarcomerciosky_lbl_datosimportantes">Empezamos la actualización, se cuidadoso!</string>
    <string name="fragment_actualizarcomerciosky_lbl_titulobienvenida">Procedamos a iniciar!</string>
    <string name="fragment_registrocomercio1_lblnocomercio">Nombre del comercio</string>
    <string name="fragment_registrocomercio1_lblprocomercio">Propietario</string>
    <string name="fragment_registrocomercio1_lblt1comercio">Telefono 1</string>
    <string name="fragment_registrocomercio1_lblt2comercio">Teléfono 2</string>
    <string name="fragment_registrocomercio1_lblemcomercio">Email</string>
    <string name="fragment_registrocomercio1_lbldicomercio">Dirección Comercio</string>
    <string name="fragment_registrocomercio1_lblnocomercio_hint">e.g PolloFast</string>
    <string name="fragment_registrocomercio1_lblprocomercio_hint">e.g Juan Pérez</string>
    <string name="fragment_registrocomercio1_lblt1comercio_hint">#######</string>
    <string name="fragment_registrocomercio1_lblt2comercio_hint">#######</string>
    <string name="fragment_registrocomercio1_lblemcomercio_hint">e.g ejemplo@ejemplo.com</string>
    <string name="fragment_registrocomercio1_lbldicomercio_hint">e.g 100 m de allá</string>
    <string name="fragment_registrocomercio1_lbltitulofragmentrc01">Datos del comercio</string>
    <string name="fragment_registrocomercio1_lbl_rc01notas">Puede regresar a inicio</string>
    <string name="fragment_registrocomercio2_lbl_tituloscr2">¿En qué categorías entras?</string>
    <string name="fragment_registrocomercio3_lbl_tituloscr3">Selecciona tu ubicación</string>
    <string name="fragment_registrocomercio4_lbl_tituloscr4">Selecciona imagen aquí</string>
    <string name="fragment_registrocomercio5_lbl_src5_titulo_pref">Tus preferencias!</string>
    <string name="fragment_registrocomercio5_lblcontactosinsub">Contactar sin subcripción</string>
    <string name="fragment_registrocomercio5_lblprodusinsub">Ver Catálogo sin subcripción</string>
    <string name="fragment_registrocomercio5_lblsevicioexpress">Servicio Express</string>
    <string name="fragment_registrocomercio5_switch_on">Si</string>
    <string name="fragment_registrocomercio5_switch_off">No</string>
    <string name="fragment_registrocomercio5_lbl_tituloscr5">Ya casi terminamos!</string>
    <string name="fragment_registrocomercio5_img_imagendescripsc5">Imagen de meta, ya casi se termina el proceso de registro</string>
    <string name="fragment_registrocomercio5_lbl_scr5notasextra">Su empresa está a punto de registrarse, sólo queda aceptar
	    los terminos del contrato. Ojalá te guste!</string>
    <string name="fragment_registrocomercio5_lbl_src5aceptacontrato">¿Acepta términos?</string>
    <string name="fragment_registrocomercio5_lbl_agradecimientorc">Esperamos que sea de mucha ayuda!</string>
    <string name="fragment_registrocomercio5_btn_finalizar">Realizar registro</string>
    <string name="fragment_registrocomercio5_java_msgaceptarterminos">Debes aceptar los términos!</string>
    <string name="fragment_actualizarcomercio5_lbl_scr5notasextra">Su empresa está a punto de actualizarse,
         ¿Está seguro que quiere actualizar?!</string>
    <string name="fragment_actualizarcomercio5_lbl_src5aceptacontrato">Estoy seguro!</string>
    <string name="fragment_actualizarcomercio5_btn_finalizar">Si lo estoy!</string>
    <string name="activity_main_descripcion_btn_promociones">Módulo de promociones</string>
    <string name="activity_main_descripcion_btn_home">Módulo de Inicio</string>
    <string name="activity_main_descripcion_btn_myhome">Módulo de mi perfil</string>
    <string name="activity_main_descripcion_btn_solicitudes">Módulo de solicitudes</string>
    <string name="activity_main_descripcion_btn_pedidos">Módulo de pedidos</string>
    <string name="activity_main_descripcion_btn_configuraciones">Módulo de configuraciones</string>
    <string name="activity_main_descripcion_btn_productos">Módulo de productos.</string>
    <string name="activity_registroproducto_lbl_titulobienvenida_product">Registro de Producto</string>
    <string name="activity_registroproducto_img_icon_product">Imagen para el registro del producto. No tiene utilidad.</string>
    <string name="activity_registroproducto_lbl_datosimportantes_product">A continuación se te pediran datos importantes para realizar el registro del nuevo producto a ofrecer.</string>
    <string name="activity_registroproducto_lbl_notassky_product">Puede regresar al panel de control.</string>
    <string name="activity_registroproducto_titulo">Registro de Producto</string>
    <string name="activity_registroproducto_btnnext">Siguiente</string>
    <string name="activity_registroproducto_btnprev">Anterior</string>
    <string name="activity_registroproducto_java_noiratras">No puedes ir mas atrás!</string>
    <string name="activity_registroproducto_java_noiradelante">No puedes ir mas adelante!</string>
    <string name="activity_registroproducto_"></string>
    <string name="activity_updateproducto_lbl_titulobienvenida_product">Actualización de Producto</string>
    <string name="activity_updateproducto_lbl_datosimportantes_product">Aquí empiezas a actualizar el producto seleccionado. Se cuidadoso!.</string>
    <string name="fragment_updateproducto3_lbl_scr5notasextra_product">Esta a punto de actualizar un  producto, pulsa en el boton de guardar</string>
    <string name="fragment_updateproducto3_btn_finalizar_product">Actualizar Producto</string>
    <string name="fragment_updateproducto3_titulo">Actualizar Producto</string>
    <string name="fragment_registroproducto1_lblnoproducto">Nombre del Producto</string>
    <string name="fragment_registroproducto1_lbltitulofragmentrc01">Datos del Producto</string>
    <string name="fragment_registroproducto1_lblnoproducto_hint">Ej. Pizza</string>
    <string name="fragment_registroproducto1_lbldeproducto">Descripción del Producto</string>
    <string name="fragment_registroproducto1_lbldeproducto_hint">Ej. Pizza con jamón</string>
    <string name="fragment_registroproducto1_lblpeproducto">Precio del Producto</string>
    <string name="fragment_registroproducto1_lblpeproducto_hint">Ej. 5000</string>
    <string name="fragment_registroproducto1_lbl_rc01notas">Regresar al panel de control</string>
    <string name="fragment_registroproducto2_lbl_tituloscr2_product">Imágenes del producto</string>
    <string name="fragment_registroproducto2_lbl_rc2regresar_producto">Regresar al panel de control</string>
    <string name="activity_registrousuario_lblnousuario">Tu nombre</string>
    <string name="activity_registrousuario_txtnousuario_hint">Ej. Pablo</string>
    <string name="activity_registrousuario_lblap1usuario">Tu primer apellido</string>
    <string name="activity_registrousuario_txtap1usuario_hint">Ej. Rodriguez</string>
    <string name="activity_registrousuario_lblap2usuario">Tu segundo apellido</string>
    <string name="activity_registrousuario_txtap2usuario_hint">Ej. Rodriguez</string>
    <string name="activity_registrousuario_lblfechanacimiento">Naciste el</string>
    <string name="activity_registrousuario_lblfechanac">Selecciona aquí</string>
    <string name="activity_registrousuario_lblusername">Nombre de Usuario</string>
    <string name="activity_registrousuario_txtusername_hint">user01ab</string>
    <string name="activity_registrousuario_lblrpassword1">Contraseña</string>
    <string name="activity_registrousuario_txtrpassword1_hint">*******</string>
    <string name="activity_registrousuario_lblrpassword2">Nuevamente Contraseña</string>
    <string name="activity_registrousuario_lblsexo">Sexo</string>
    <string name="activity_datosloginusuario_lbldatoslogintitulo">Tus datos de Registro</string>
    <string name="activity_datosloginusuario_lbldatosloginusername">Username</string>
    <string name="activity_datosloginusuario_lbldatosloginusernamedata">....</string>
    <string name="activity_datosloginusuario_lbldatosloginpassword">Contraseña</string>
    <string name="activity_datosloginusuario_lbldatosloginpassworddata">....</string>
    <string name="activity_datosloginusuario_lbldatosloginnotas">Tu registro se realizó con éxito, estos son tus datos para ingresar al sistema, guárdalos de manera
        segura para que nadie te robe la información.</string>
    <string name="activity_datosloginusuario_lbldatosloginiralogin">Autentificación</string>
    <string name="menu_mproducto_itemadd">Agregar</string>
    <string name="menu_mproducto_itemedit">Modificar</string>
    <string name="menu_mproducto_itemdelete">Eliminar</string>
    <string name="menu_principal_superior_configuracion">Configuraciones</string>
    <string name="menu_principal_superior_logout">Cerrar Sesión</string>
    <string name="menu_principal_superior_exit">Salir</string>
    <string name="menu_principal_superior_acercade">Acerca de ...</string>
    <string name="menu_producto_superior_gohome">Ir a Principal</string>
</resources>