<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="una.android.rapimoncha.Main" >

    <item
        android:id="@+id/menu_main_action_configuration"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_principal_superior_configuracion"/>
    <item
        android:id="@+id/menu_main_action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_principal_superior_logout"/>
    <item
        android:id="@+id/menu_main_action_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_principal_superior_exit"/>
    <item
        android:id="@+id/menu_main_action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_principal_superior_acercade"/>        
</menu>
