<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_mproducto_editar"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_mproducto_itemedit">
    </item>
    <item
        android:id="@+id/menu_mproducto_eliminar"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_mproducto_itemdelete">
    </item>
    <item
        android:id="@+id/menu_mproducto_agregar"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_mproducto_itemadd">
    </item>
            <item
        android:id="@+id/menu_productos_action_gohome"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_producto_superior_gohome"/>

</menu>